JVM内存分配：长期存活的对象将进入老年代